# rust-note

./: .gitignore  Cargo.toml
basic/: main  main.rs
basic/demo/: house  house.rs
demo/src/: main  main.rs
greenting/src/: main_a.rs
greenting/src/basic/: cfg  cfg.rs  mybasic
greenting/src/example/: basic.rs
greenting/src/school/: student.rs
greeting/: Cargo.toml  house.rs
greeting/src/: demo  demo.rs  main  main.rs  nation  nation.rs
greeting/src/basic/: mybasic  mybasic.rs
greeting/src/biology/: mod.rs  people.rs
greeting/src/biology/animal/: cat.rs  dog.rs
greeting/src/demo/: mod.rs  mydemo.rs  test.rs
greeting/src/libs/: basic.rs  mod.rs
greeting/src/math/: mod.rs
greeting/src/package/: sync  sync.rs
greeting/src/school/: teacher.rs
greeting/src/testbasic/: basicmod.rs  mod.rs
package_utils/: Cargo.toml
package_utils/src/: lib.rs
package_utils/src/sync_pack/: lock.rs  mod.rs
rust_macro/: Cargo.toml
rust_macro/src/: library.rlib  main  main.rs  rary.rs
rust_macro/src/example/: hashmapdemo.rs  jsondemo.rs  mod.rs
src/: lib.rs  main.rs
src/basic/: mod.rs
src/biology/animal/: cat.rs  dog.rs
src/example/: mod.rs
