[package]
name = "rust_macro"
version = "0.1.0"
authors = ["peanut <peanut@itech8.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
mysql = "*"  
package_utils = { path = "../package_utils",version = "0.1.0"}